--- a/blog-fenderSpoon/index.html
+++ b/blog-fenderSpoon/index.html
@@ -35,7 +35,7 @@
             <div><input type="text" name="username" required /></div>
             <div>Password:</div>
             <div><input type="password" name="passwd" required /></div>
-            <div><input type="submit" value="Login" /></div>
+            <div><input type="button" id="buttonLoginUser" value="Login" /></div>
         </form>
     </section>
     <section id="viewRegister">
@@ -47,7 +47,7 @@
             <div>Password:</div>
             <div><input type="password"
                         name="passwd" required /></div>
-            <div><input type="submit" value="Register" /></div>
+            <div><input type="button" id="buttonRegisterUser" value="Register" /></div>
         </form>
     </section>
 
