--- a/blog-fenderSpoon/index.html
+++ b/blog-fenderSpoon/index.html
@@ -19,16 +19,19 @@
         <a href="#" id="linkLogout">Logout</a>
         <span id="LoggedInUser"></span>
 </header>
-<section id="loadingBox">Loading ...</section>
+
+<div class="loader" id="loadingBox"></div>
 <section id="infoBox">Info</section>
 <section id="errorBox">Error</section>
 
 
 <main>
     <section id="viewHome">
-        <h1>Welcome</h1>
-        Welcome to our Blog News.
-    </section>
+        <h1 id="text">Welcome</h1>
+
+
+        <img src="photos-library/News-media-standards.jpg" height="100%" width="100%"/></section>
+
     <section id="viewLogin">
         <h1>Please login</h1>
         <form id="formLogin">
